examples/test/testpolicy12287.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12287
  namespace: namespace438
spec:
  podSelector:
    matchLabels:
      key32: value24
      key18: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value38
          key10: value45
          key22: value9
      podSelector:
        matchLabels:
          key33: value45
          key21: value14
